Fixed issue
Increased line-height for .CodeMirror to prevent overlapping of matching bracket boxes

--- a/pastel-on-dark.css
+++ b/pastel-on-dark.css
@@ -10,6 +10,7 @@
 .cm-s-pastel-on-dark.CodeMirror {
 	background: #2c2827;
 	color: #8F938F;
+	line-height: 1.5;
 }
 .cm-s-pastel-on-dark div.CodeMirror-selected { background: rgba(221,240,255,0.2) !important; }
 .cm-s-pastel-on-dark .CodeMirror-gutters {
